# learned-behavior

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  install.sh  learning.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
commands/: advice.md  mine.md  review.md
config/: default-skill-registry.json
docs/: aider.md  antigravity.md  claude-code.md  codex.md  continue.md  copilot.md  cursor.md  gemini.md  windsurf.md
examples/: guard-template.py  settings.local.json.example
hooks/: hooks.json
tests/: conftest.py  test_reinforce.py
